[metadata]
name = metrics-neurosparkles
version = 1
author = neko
author_email = neko@127.0.0.1
description = neurosparkles metrics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NekointheShell/neurosparkles-metrics.git
project_urls =
    Bug Tracker = https://github.com/NekointheShell/neurosparkes-metrics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Indpendent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

install_requires =
    pytest
    flask
    pymongo
    argon2-cffi
    validators


[options.packages.find]
where = src


[tool:pytest]
testpaths =
    tests
